--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vercel/analytics": "^1.5.0",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-device-mockup": "^1.0.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6"
   },
   "devDependencies": {
