--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.77",
+    "@langchain/openai": "^0.6.13",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
@@ -16,6 +18,7 @@
     "@vercel/analytics": "^1.5.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.34",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-device-mockup": "^1.0.0",
@@ -23,7 +26,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
